@@ -1,0 +1,151 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- TemplateBeginEditable name="doctitle" -->
+<title>NewPoints - Converters</title>
+<!-- TemplateEndEditable -->
+<!-- TemplateBeginEditable name="head" -->
+<!-- TemplateEndEditable -->
+<style type="text/css"> 
+<!-- 
+body  {
+	font: 80% Verdana, Arial, Helvetica, sans-serif;
+	background: #CFEEFF;
+	margin: 0; /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
+	padding: 0;
+	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
+	color: #000000;
+}
+
+a		{text-decoration: none}
+a:link	{color: #00A4FF;}
+a:hover	{color: #00A4FF; }
+a:active	{color: #00A4FF}
+a:visited	{color: #00A4FF}
+
+.twoColLiqRtHdr #container { 
+	width: 80%;  /* this will create a container 80% of the browser width */
+	background: #FFFFFF;
+	margin: 0 auto; /* the auto margins (in conjunction with a width) center the page */
+	border: 1px solid #000000;
+	text-align: left; /* this overrides the text-align: center on the body element. */
+} 
+.twoColLiqRtHdr #header { 
+	background: #00A4FF; 
+	padding: 0 10px;  /* this padding matches the left alignment of the elements in the divs that appear beneath it. If an image is used in the #header instead of text, you may want to remove the padding. */
+} 
+.twoColLiqRtHdr #header h1 {
+	margin: 0; /* zeroing the margin of the last element in the #header div will avoid margin collapse - an unexplainable space between divs. If the div has a border around it, this is not necessary as that also avoids the margin collapse */
+	padding: 10px 0; /* using padding instead of margin will allow you to keep the element away from the edges of the div */
+}
+
+.twoColLiqRtHdr #sidebar1 {
+	float: right; /* since this element is floated, a width must be given */
+	width: 24%; 
+	background: #00A4FF; /* the background color will be displayed for the length of the content in the column, but no further */
+	padding-top: 15px 0; /* top and bottom padding create visual space within this div  */
+	padding-left: 15px 0; /* top and bottom padding create visual space within this div  */
+}
+.twoColLiqRtHdr #sidebar1 h3, .twoColLiqRtHdr #sidebar1 p {
+	margin-left: 10px; /* the left and right margin should be given to every element that will be placed in the side columns */
+	margin-right: 10px;
+}
+
+/* Tips for mainContent:
+1. the space between the mainContent and sidebar1 is created with the right margin on the mainContent div.  No matter how much content the sidebar1 div contains, the column space will remain. You can remove this right margin if you want the #mainContent div's text to fill the #sidebar1 space when the content in #sidebar1 ends.
+2. to avoid float drop at a supported minimum 800 x 600 resolution, elements within the mainContent div should be 430px or smaller (this includes images).
+3. in the Internet Explorer Conditional Comment below, the zoom property is used to give the mainContent "hasLayout." This avoids several IE-specific bugs.
+*/
+.twoColLiqRtHdr #mainContent { 
+	margin: 0 26% 0 10px; /* the left margin should mirror the margin on the header and footer for proper alignment. */
+} 
+
+.twoColLiqRtHdr #footer { 
+	padding: 0 10px; /* this padding matches the left alignment of the elements in the divs that appear above it. */
+	background:#00A4FF; 
+} 
+.twoColLiqRtHdr #footer p {
+	margin: 0; /* zeroing the margins of the first element in the footer will avoid the possibility of margin collapse - a space between divs */
+	padding: 10px 0; /* padding on this element will create space, just as the the margin would have, without the margin collapse issue */
+}
+
+/* Miscellaneous classes for reuse */
+.fltrt { /* this class can be used to float an element right in your page. The floated element must precede the element it should be next to on the page. */
+	float: right;
+	margin-left: 8px;
+}
+.fltlft { /* this class can be used to float an element left in your page. The floated element must precede the element it should be next to on the page. */
+	float: left;
+	margin-right: 8px;
+}
+.clearfloat { /* this class should be placed on a div or break element and should be the final element before the close of a container that should fully contain a float */
+	clear:both;
+    height:0;
+    font-size: 1px;
+    line-height: 0px;
+}
+--> 
+</style><!--[if IE]>
+<style type="text/css"> 
+/* place css fixes for all versions of IE in this conditional comment */
+.twoColLiqRtHdr #sidebar1 { padding-top: 30px; }
+.twoColLiqRtHdr #mainContent { zoom: 1; padding-top: 15px; }
+/* the above proprietary zoom property gives IE the hasLayout it needs to avoid several bugs */
+</style>
+<![endif]--></head>
+
+<body class="twoColLiqRtHdr">
+
+<div id="container">
+  <div id="header">
+    <h1>NewPoints - Converters</h1>
+  <!-- end #header --></div>
+  <div id="sidebar1">
+  <br />
+    <strong><h3>Thanks to:</h3></strong>
+    <ul>
+      <li><a href="http://forums.mybb-plugins.com/user-883.html" style="color: #000000;">Andrew</a></li>
+      <li><a href="http://forums.mybb-plugins.com/user-884.html" style="color: #000000;">Glas</a></li>
+      <li><a href="http://community.mybb.com/user-17052.html" style="color: #000000;">Mark.M</a</li>
+      <li><a href="http://community.mybb.com/user-22890.html" style="color: #000000;">ralgith</a</li>
+	  <li><a href="http://mybbhacks.zingaburga.com/member.php?action=profile&uid=1" style="color: #000000;">ZiNgA BuRgA/Yumi</a></li>
+    </ul>
+      <!-- end #sidebar1 -->
+    </p>
+  </div>
+  <div id="mainContent">
+    <p>NewPoints comes with two converters, one to convert MyPlaza Turbo data to NewPoints data and one to convert MyPS data to NewPoints data.
+    <p>Data converted from MyPlaza Turbo: points, forum income rate to forum rules and user group income rate to user group rules.
+    <p>Data converted from MyPS: points, exempt forums to forum rules and exempt groups to user group rules.
+    <p>    
+    <p><strong>Convert MyPlaza Turbo to NewPoints</strong></p>
+<ul>
+  <li>MAKE SURE YOU HAVE A WORKING NewPoints INSTALLATION FIRST</li>
+  <li>MAKE SURE MYPLAZA TURBO IS INSTALLED AND ACTIVATED</li>
+  <li>Upload the file converters/converter1.php to the root of your MyBB installation and run it.</li>
+  <li> Follow the on screen instructions.</li>
+  <li>Delete the file from your server once the data has been converted.</li>
+  <li>Uninstall MyPlaza Turbo.</li>
+  <li>Done!</li>
+  </ul>
+<p><strong>Convert MyPS to NewPoints</strong></p>
+<ul>
+  <li>MAKE SURE YOU HAVE A WORKING NewPoints INSTALLATION FIRST</li>
+  <li>MAKE SURE MYPS IS INSTALLED AND ACTIVATED</li>
+  <li>Upload the file converters/converter2.php to the root of your MyBB installation and run it.</li>
+  <li> Follow the on screen instructions.</li>
+  <li>Delete the file from your server once the data has been converted.</li>
+  <li>Uninstall MyPS.</li>
+  <li>Done!</li>
+</ul>
+<h2>Support	</h2>
+    <p>If you have any questions, ask them at <a href="http://forums.mybb-plugins.com">MyBB-Plugins.com</a>.</p>
+</div>
+	<br class="clearfloat" />
+  <div id="footer">
+    <p>&copy; 2009-2011 - Pirata Nervo - All Rights Reserved.</p>
+  <!-- end #footer --></div>
+<!-- end #container --></div>
+</body>
+</html>
