@@ -179,6 +179,10 @@ a:visited	{color: #00A4FF}
 	  <br />
     </p>
     <h2>Upgrade</h2>
+	<p><strong>Upgrading from 1.9.5/1.9.6 to 1.9.7</strong></p>
+	<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
+	<p><strong>Upgrading from 1.9.5 to 1.9.6</strong></p>
+	<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
 	<p><strong>Upgrading from 1.9.4 to 1.9.5</strong></p>
 	<p>Upload the contents of the &quot;Upload&quot; folder to the root of your MyBB installation, overwritting the old files.</p>
 	<p>Then, go to Admin CP -> NewPoints -> Upgrades -> Run the "Upgrade to 1.9.5" upgrade.</p>
